--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -364,7 +364,7 @@ a.back-to-prev:hover, a.back-to-prev:focus {
 }
 
 .counter-section {
-  background: url(../img/background/bg-1.jpg);
+  /*background: url();*/
   overflow: hidden;
   position: relative;
 }
@@ -1499,4 +1499,124 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 
 .user-tab-pane-height{
   height: 500px;
+}
+
+/*wps_invite.html*/
+.wps-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url(../images/picture/index/index-bg.png) fixed no-repeat;
+  background-size: cover;
+}
+
+.wps-form {
+  width: 260px;
+  height: 260px;
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  text-align: center;
+  position: relative;
+  z-index: 100;
+  background: inherit;
+  border-radius: 18px;
+  overflow: hidden; /* 隐藏多余的模糊效果 */
+}
+
+.wps-form::before {
+  content: "";
+  width: calc(100% + 20px);
+  height: calc(100% + 20px);
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  overflow: hidden;
+  background: inherit;
+  box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.25);
+  filter: blur(6px);
+  z-index: -1;
+}
+
+.wps-form h2 {
+  font-size: 18px;
+  font-weight: 400;
+  color: #3d5245;
+}
+
+.wps-form input,
+.wps-form button {
+  margin: 6px 0;
+  height: 36px;
+  border: none;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  padding: 0 14px;
+  color: #3d5245;
+}
+
+.wps-form input::placeholder{
+  color: #3d5245;
+}
+
+/* 补充，取消选中高亮蓝框 */
+.wps-form button:focus,
+.wps-form input:focus {
+  outline: 0;
+}
+
+.wps-form button {
+  background-color: rgba(0, 128, 255, 0.27);
+  color: white;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.wps-form button:hover {
+  background-color: rgba(0, 123, 255, 0.67);
+}
+
+.wps-form button:focus {
+  outline: 0;
+}
+
+.wps-form button::before,
+.wps-form button::after {
+  content: "";
+  display: block;
+  width: 80px;
+  height: 100%;
+  background: rgba(179, 255, 210, 0.5);
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: skewX(-15deg);
+  filter: blur(30px);
+  overflow: hidden;
+  transform: translateX(-100px);
+}
+
+.wps-form button::after {
+  width: 40px;
+  background: rgba(179, 255, 210, 0.3);
+  left: 60px;
+  opacity: 0;
+  filter: blur(5px);
+}
+
+.wps-form button:hover::before {
+  transition: 1s;
+  transform: translateX(320px);
+  opacity: 0.7;
+}
+
+.wps-form button:hover::after {
+  transition: 1s;
+  transform: translateX(320px);
+  opacity: 1;
 }
