--- a/src/main/resources/templates/registered.html
+++ b/src/main/resources/templates/registered.html
@@ -16,91 +16,7 @@
 <body>
 
 <!-- 头部开始 -->
-<header id="header-wrap">
-    <!-- 导航栏开始 -->
-    <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar indigo top-nav-collapse">
-        <div class="container">
-            <div class="navbar-header">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar"
-                        aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    <span class="icon-menu"></span>
-                    <span class="icon-menu"></span>
-                    <span class="icon-menu"></span>
-                </button>
-                <a href="https://www.chairc.cn" class="navbar-brand"><img
-                        src="./Home_files/logo.png" alt=""></a>
-            </div>
-            <div class="collapse navbar-collapse" id="main-navbar">
-                <ul class="onepage-nev navbar-nav mr-auto w-100 justify-content-end clearfix">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">
-                            主页
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/#about">
-                            关于
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/article">
-                            归档
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/message">
-                            留言
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">
-                            图片
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">
-                            娱乐
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user/login">
-                            个人
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <!-- 手机导航栏开始 -->
-        <ul class="onepage-nev mobile-menu">
-            <li>
-                <a href="/">主页</a>
-            </li>
-            <li class="">
-                <a href="/#about">关于</a>
-            </li>
-            <li class="">
-                <a href="/article">归档</a>
-            </li>
-            <li class="">
-                <a href="/message">留言</a>
-            </li>
-            <li class="">
-                <a href="">图片</a>
-            </li>
-            <li class="">
-                <a href="">娱乐</a>
-            </li>
-            <li class="">
-                <a href="/user/login">个人</a>
-            </li>
-        </ul>
-        <!-- 手机导航栏结束 -->
-    </nav>
-    <!-- 导航栏结束 -->
-
-</header>
+<header th:replace="header.html"></header>
 <!-- 头部结束 -->
 
 <div class="registered-container">
