新增友人帐功能，修改部分前后端布局问题，修改部分注释

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" th:href="@{/static/css/animate.css}">
     <link rel="stylesheet" th:href="@{/static/css/main.css}">
     <link rel="stylesheet" th:href="@{/static/css/responsive.css}">
-
 </head>
 <body>
 
@@ -34,45 +33,29 @@
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="onepage-nev navbar-nav mr-auto w-100 justify-content-end clearfix">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">
-                            主页
-                        </a>
+                        <a class="nav-link" href="/">主页</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/#about">
-                            关于
-                        </a>
+                        <a class="nav-link" href="/#about">关于</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/article">
-                            归档
-                        </a>
+                        <a class="nav-link" href="/article/1">归档</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/message">
-                            留言
-                        </a>
+                        <a class="nav-link" href="/message/1">留言</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">
-                            图片
-                        </a>
+                        <a class="nav-link" href="/friendLink/1">友人帐</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/entertainment">
-                            娱乐
-                        </a>
+                        <a class="nav-link" href="/entertainment">娱乐</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/user/login">
-                            个人
-                        </a>
+                        <a class="nav-link" href="/user/login">个人</a>
                     </li>
                 </ul>
             </div>
         </div>
-
-        <!-- 手机导航栏开始 -->
         <ul class="onepage-nev mobile-menu">
             <li>
                 <a href="/">主页</a>
@@ -81,13 +64,13 @@
                 <a href="/#about">关于</a>
             </li>
             <li class="">
-                <a href="/article">归档</a>
+                <a href="/article/1">归档</a>
             </li>
             <li class="">
-                <a href="/message">留言</a>
+                <a href="/message/1">留言</a>
             </li>
             <li class="">
-                <a href="">图片</a>
+                <a href="/friendLink/1">友人帐</a>
             </li>
             <li class="">
                 <a href="/entertainment">娱乐</a>
@@ -96,14 +79,9 @@
                 <a href="/user/login">个人</a>
             </li>
         </ul>
-        <!-- 手机导航栏结束 -->
     </nav>
-    <!-- 导航栏结束 -->
-
-    <!-- 主页壁纸开始 -->
     <div id="hero-area" class="hero-area-bg">
         <div class="overlay">
-
         </div>
         <div class="container">
             <div class="row">
