--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -32,39 +32,25 @@
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="onepage-nev navbar-nav mr-auto w-100 justify-content-end clearfix">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">
-                            主页
-                        </a>
+                        <a class="nav-link" href="/">主页</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/#about">
-                            关于
-                        </a>
+                        <a class="nav-link" href="/#about">关于</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/article">
-                            归档
-                        </a>
+                        <a class="nav-link" href="/article/1">归档</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/message">
-                            留言
-                        </a>
+                        <a class="nav-link" href="/message/1">留言</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">
-                            图片
-                        </a>
+                        <a class="nav-link" href="/friendLink/1">友人帐</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/entertainment">
-                            娱乐
-                        </a>
+                        <a class="nav-link" href="/entertainment">娱乐</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/user/login">
-                            个人
-                        </a>
+                        <a class="nav-link" href="/user/login">个人</a>
                     </li>
                 </ul>
             </div>
@@ -77,13 +63,13 @@
                 <a href="/#about">关于</a>
             </li>
             <li class="">
-                <a href="/article">归档</a>
+                <a href="/article/1">归档</a>
             </li>
             <li class="">
-                <a href="/message">留言</a>
+                <a href="/message/1">留言</a>
             </li>
             <li class="">
-                <a href="">图片</a>
+                <a href="/friendLink/1">友人帐</a>
             </li>
             <li class="">
                 <a href="/entertainment">娱乐</a>
